--- a/projects/TokinoKairo/project.json
+++ b/projects/TokinoKairo/project.json
@@ -5860,8 +5860,9 @@
                   "osc": {
                     "id": "NormalOSC",
                     "settings": {
-                      "WaveType": {
-                        "waveType": "sine"
+                      "VCO": {
+                        "waveType": "sine",
+                        "octave": 0
                       },
                       "ADSR": {
                         "attackTime": 0.001,
@@ -5924,8 +5925,9 @@
                   "osc": {
                     "id": "NormalOSC",
                     "settings": {
-                      "WaveType": {
-                        "waveType": "sawtooth"
+                      "VCO": {
+                        "waveType": "sawtooth",
+                        "octave": 0
                       },
                       "ADSR": {
                         "attackTime": 0.010999999999999998,
@@ -5998,8 +6000,9 @@
                   "osc": {
                     "id": "NormalOSC",
                     "settings": {
-                      "WaveType": {
-                        "waveType": "sawtooth"
+                      "VCO": {
+                        "waveType": "sawtooth",
+                        "octave": 0
                       },
                       "ADSR": {
                         "attackTime": 0.389,
@@ -6035,8 +6038,9 @@
                   "osc": {
                     "id": "NormalOSC",
                     "settings": {
-                      "WaveType": {
-                        "waveType": "triangle"
+                      "VCO": {
+                        "waveType": "triangle",
+                        "octave": 0
                       },
                       "ADSR": {
                         "attackTime": 0.49,
@@ -6105,8 +6109,9 @@
                   "osc": {
                     "id": "NormalOSC",
                     "settings": {
-                      "WaveType": {
-                        "waveType": "sawtooth"
+                      "VCO": {
+                        "waveType": "sawtooth",
+                        "octave": 0
                       },
                       "ADSR": {
                         "attackTime": 0.044,
@@ -6175,8 +6180,9 @@
                   "osc": {
                     "id": "DrumOSC",
                     "settings": {
-                      "WaveType": {
-                        "waveType": "sine"
+                      "VCO": {
+                        "waveType": "sine",
+                        "octave": 0
                       },
                       "ADSR": {
                         "attackTime": 0.01,
@@ -6265,7 +6271,7 @@
                         "initialFrequency": 2098,
                         "lastFrequency": 1608,
                         "decay": 0.23,
-                        "resonance": 0
+                        "resonance": 9
                       }
                     }
                   ],
@@ -6327,15 +6333,15 @@
           }
         }
       ],
-      "volume": 0.07900000363588333
+      "volume": 0.04700000211596489
     }
   ],
-  "focusedTrack": "_0ckm6cga4",
-  "cursor": 78341,
+  "focusedTrack": "_2ak8ohre8",
+  "cursor": 63252,
   "stepLength": 240,
   "visibleArea": {
-    "from": 55145.59524346847,
-    "to": 88640.58370724891
+    "from": 47838.536155207876,
+    "to": 81333.52461898832
   },
   "recording": true
 }
