--- a/projects/TokinoKairo/project.json
+++ b/projects/TokinoKairo/project.json
@@ -5905,7 +5905,7 @@
           }
         }
       ],
-      "volume": 0.026999998837709427
+      "volume": 0.03999999910593033
     },
     {
       "id": "_cvntna65n",
@@ -5980,7 +5980,7 @@
           }
         }
       ],
-      "volume": 0.010999999940395355
+      "volume": 0.017999999225139618
     },
     {
       "id": "_pgsypcvd6",
@@ -6089,7 +6089,7 @@
           }
         }
       ],
-      "volume": 0.025999998673796654
+      "volume": 0.03799999877810478
     },
     {
       "id": "_dbi1mz80u",
@@ -6160,7 +6160,7 @@
           }
         }
       ],
-      "volume": 0.0429999977350235
+      "volume": 0.050999999046325684
     },
     {
       "id": "_2ak8ohre8",
@@ -6333,15 +6333,15 @@
           }
         }
       ],
-      "volume": 0.04700000211596489
+      "volume": 0.06000000238418579
     }
   ],
-  "focusedTrack": "_2ak8ohre8",
-  "cursor": 63252,
+  "focusedTrack": "_pgsypcvd6",
+  "cursor": 18975,
   "stepLength": 240,
   "visibleArea": {
-    "from": 47838.536155207876,
-    "to": 81333.52461898832
+    "from": 0,
+    "to": 33494.988463780435
   },
   "recording": true
 }
