--- a/projects/TokinoKairo/project.json
+++ b/projects/TokinoKairo/project.json
@@ -6672,6 +6672,54 @@
       "position": 45360,
       "length": 120,
       "velocity": 125.015625
+    },
+    {
+      "id": "_y25kxgd5d",
+      "trackId": "_0ckm6cga4",
+      "note": 62,
+      "position": 1774,
+      "length": 480,
+      "velocity": 127
+    },
+    {
+      "id": "_9sockcsqh",
+      "trackId": "_0ckm6cga4",
+      "note": 65,
+      "position": 2254,
+      "length": 480,
+      "velocity": 127
+    },
+    {
+      "id": "_h8sai2o5n",
+      "trackId": "_0ckm6cga4",
+      "note": 53,
+      "position": 13922,
+      "length": 480,
+      "velocity": 127
+    },
+    {
+      "id": "_cn6ousjm4",
+      "trackId": "_0ckm6cga4",
+      "note": 59,
+      "position": 14402,
+      "length": 480,
+      "velocity": 127
+    },
+    {
+      "id": "_9cu9g3oz1",
+      "trackId": "_cvntna65n",
+      "note": 57,
+      "position": 14882,
+      "length": 480,
+      "velocity": 127
+    },
+    {
+      "id": "_v1lx7k2kg",
+      "trackId": "_2ak8ohre8",
+      "note": 55,
+      "position": 15362,
+      "length": 480,
+      "velocity": 127
     }
   ],
   "tracks": [
@@ -6698,12 +6746,7 @@
                         "octave": 0,
                         "fine": 0
                       },
-                      "ADSR": {
-                        "attackTime": 0.001,
-                        "decayTime": 0.14899999999999997,
-                        "sustainLevel": 0.08000000000000002,
-                        "releaseTime": 0.21000000000000002
-                      },
+                      "Pitch": null,
                       "FM": {
                         "waveType": "sine",
                         "freqRatio": 4.5,
@@ -6719,6 +6762,12 @@
                     }
                   },
                   "effects": [],
+                  "adsr": {
+                    "attackTime": 0.005000000000000001,
+                    "decayTime": 0.13,
+                    "sustainLevel": 0.08000000000000002,
+                    "releaseTime": 0.2
+                  },
                   "amp": {
                     "amp": 0.7170000076293945
                   }
@@ -6766,12 +6815,7 @@
                         "octave": 0,
                         "fine": 0
                       },
-                      "ADSR": {
-                        "attackTime": 0.010999999999999998,
-                        "decayTime": 0.359,
-                        "sustainLevel": 0,
-                        "releaseTime": 0.3
-                      },
+                      "Pitch": null,
                       "FM": {
                         "waveType": "sawtooth",
                         "freqRatio": 0.25,
@@ -6797,6 +6841,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.005,
+                    "decayTime": 0.36000000000000004,
+                    "sustainLevel": 0,
+                    "releaseTime": 0.31
+                  },
                   "amp": {
                     "amp": 0.6000000238418579
                   }
@@ -6844,12 +6894,7 @@
                         "octave": 0,
                         "fine": 0
                       },
-                      "ADSR": {
-                        "attackTime": 0.389,
-                        "decayTime": 0.249,
-                        "sustainLevel": 0.55,
-                        "releaseTime": 0.309
-                      },
+                      "Pitch": null,
                       "FM": null,
                       "Vibrato": {
                         "delay": 0.75,
@@ -6870,6 +6915,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.39,
+                    "decayTime": 0.26,
+                    "sustainLevel": 0.57,
+                    "releaseTime": 0.31000000000000005
+                  },
                   "amp": {
                     "amp": 0.2239999920129776
                   }
@@ -6883,12 +6934,7 @@
                         "octave": 0,
                         "fine": 0
                       },
-                      "ADSR": {
-                        "attackTime": 0.49,
-                        "decayTime": 0.91,
-                        "sustainLevel": 0.34,
-                        "releaseTime": 0.22
-                      },
+                      "Pitch": null,
                       "FM": null,
                       "Vibrato": {
                         "delay": 0.38,
@@ -6909,6 +6955,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.495,
+                    "decayTime": 0.91,
+                    "sustainLevel": 0.35,
+                    "releaseTime": 0.22
+                  },
                   "amp": {
                     "amp": 0.4300000071525574
                   }
@@ -6949,12 +7001,7 @@
                         "octave": 0,
                         "fine": 0
                       },
-                      "ADSR": {
-                        "attackTime": 0.044,
-                        "decayTime": 0.149,
-                        "sustainLevel": 0.228,
-                        "releaseTime": 0.03
-                      },
+                      "Pitch": null,
                       "FM": null,
                       "Vibrato": {
                         "delay": 0,
@@ -6975,6 +7022,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.05,
+                    "decayTime": 0.15000000000000002,
+                    "sustainLevel": 0.22999999999999998,
+                    "releaseTime": 0.03
+                  },
                   "amp": {
                     "amp": 0.6000000238418579
                   }
@@ -7008,24 +7061,20 @@
               "sources": [
                 {
                   "osc": {
-                    "id": "DrumOSC",
+                    "id": "NormalOSC",
                     "settings": {
                       "VCO": {
                         "waveType": "sine",
                         "octave": 0,
                         "fine": 0
                       },
-                      "ADSR": {
-                        "attackTime": 0.01,
-                        "decayTime": 0.13,
-                        "sustainLevel": 0,
-                        "releaseTime": 0.11000000000000007
-                      },
                       "Pitch": {
                         "initialPitch": 69.6999999999999,
                         "lastPitch": 110.70000000000002,
                         "pitchDecay": 0.188
-                      }
+                      },
+                      "FM": null,
+                      "Vibrato": null
                     }
                   },
                   "effects": [
@@ -7039,6 +7088,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.01,
+                    "decayTime": 0.13,
+                    "sustainLevel": 0,
+                    "releaseTime": 0.11
+                  },
                   "amp": {
                     "amp": 0.9479999542236328
                   }
@@ -7047,12 +7102,6 @@
                   "osc": {
                     "id": "NoiseOSC",
                     "settings": {
-                      "ADSR": {
-                        "attackTime": 0.01,
-                        "decayTime": 0.020000000000000004,
-                        "sustainLevel": 0,
-                        "releaseTime": 0
-                      },
                       "Noise": {
                         "color": "white"
                       }
@@ -7069,6 +7118,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.01,
+                    "decayTime": 0.020000000000000004,
+                    "sustainLevel": 0,
+                    "releaseTime": 0
+                  },
                   "amp": {
                     "amp": 0
                   }
@@ -7084,12 +7139,6 @@
                   "osc": {
                     "id": "NoiseOSC",
                     "settings": {
-                      "ADSR": {
-                        "attackTime": 0.01,
-                        "decayTime": 0.1,
-                        "sustainLevel": 0,
-                        "releaseTime": 0.159
-                      },
                       "Noise": {
                         "color": "white"
                       }
@@ -7106,6 +7155,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.01,
+                    "decayTime": 0.1,
+                    "sustainLevel": 0.7,
+                    "releaseTime": 0.1
+                  },
                   "amp": {
                     "amp": 0.699999988079071
                   }
@@ -7121,12 +7176,6 @@
                   "osc": {
                     "id": "NoiseOSC",
                     "settings": {
-                      "ADSR": {
-                        "attackTime": 0.009,
-                        "decayTime": 0.02,
-                        "sustainLevel": 0,
-                        "releaseTime": 0
-                      },
                       "Noise": {
                         "color": "white"
                       }
@@ -7143,6 +7192,12 @@
                       }
                     }
                   ],
+                  "adsr": {
+                    "attackTime": 0.01,
+                    "decayTime": 0.1,
+                    "sustainLevel": 0.7,
+                    "releaseTime": 0.1
+                  },
                   "amp": {
                     "amp": 0.20000000298023224
                   }
@@ -7162,12 +7217,12 @@
     }
   ],
   "editor": {
-    "focusedTrack": "_0ckm6cga4",
-    "cursor": 48306,
+    "focusedTrack": "_2ak8ohre8",
+    "cursor": 46924,
     "stepLength": 480,
     "visibleArea": {
-      "from": 47731.24627976504,
-      "to": 71596.86941964756
+      "from": 31966.797967182087,
+      "to": 52329.21037093506
     },
     "recording": true,
     "solo": null,
